[tool.poetry]
name = "catbook"
version = "0.9.0"
description = ""
authors = ["OleksiiHladkov <131037122+OleksiiHladkov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"

[tool.poetry.scripts]
catbook = "catbook:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
